[package]
name = "axum-acl"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Flexible ACL middleware for axum 0.8 with 5-tuple rule matching (endpoint, role, id, ip, time)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/greenpdx/axum-acl"
homepage = "https://github.com/greenpdx/axum-acl"
documentation = "https://docs.rs/axum-acl"
keywords = ["axum", "middleware", "acl", "authorization", "access-control"]
categories = ["web-programming", "authentication"]
readme = "README.md"
authors = ["Shaun Savage <savages@crmep.com>"]
exclude = [
    ".github/*",
]

[dependencies]
axum = "0.8"
tower = "0.5"
tower-service = "0.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ipnetwork = "0.20"
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
ast-parser = ["syn", "quote", "proc-macro2"]

[dependencies.syn]
version = "2"
features = ["full", "parsing", "visit"]
optional = true

[dependencies.quote]
version = "1"
optional = true

[dependencies.proc-macro2]
version = "1"
features = ["span-locations"]
optional = true

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "custom_extractor"
path = "examples/custom_extractor.rs"

[[example]]
name = "toml_config"
path = "examples/toml_config.rs"

[[bin]]
name = "endpoint_parser"
path = "tools/endpoint_parser.rs"

[workspace]
members = [".", "examples/axum-acl-demo"]
